--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ language: python
 python:
   - "3.4"
   - "3.3"
+  - "3.2"
   - "2.7"
   - "2.6"
+  - "pypy3"
   - "pypy"
 
 # Use container-based infrastructure
