--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,7 @@ python:
   - "3.6"
   - "3.5"
   - "3.4"
-  - "3.3"
-  - "3.2"
   - "2.7"
-  - "2.6"
 
 # Use container-based infrastructure
 sudo: false
@@ -19,20 +16,12 @@ sudo: false
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - pip install -r requirements.txt
-
-  # Coverage 4.0 doesn't support Python 3.2
-  - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install coverage==3.7.1; fi
-  - if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then pip install coverage; fi
+  - pip install coverage
 
 # command to run tests, e.g. python setup.py test
 script: coverage run --source pronouncing setup.py test --verbose
 
 after_success:
-  # Coveralls 1.0b1 doesn't support Python 3.2
-  # Coveralls needs Requests, where 2.11.0 doesn't support Python 3.2
-- if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install requests==2.10.0; fi
-- if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install coveralls==1.0a2; fi
-- if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then pip install coveralls; fi
 - pip install coveralls
 - coveralls # send coverage to coveralls.io
 
