Add support for Python 3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,17 @@
 
 language: python
 
-python:
-  - "pypy3"
-  - "pypy"
-  - "3.6"
-  - "3.5"
-  - "3.4"
-  - "2.7"
+matrix:
+  include:
+    - python: "pypy3"
+    - python: "pypy"
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+    - python: "3.6"
+    - python: "3.5"
+    - python: "3.4"
+    - python: "2.7"
 
 # Use container-based infrastructure
 sudo: false
