--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,14 @@
 
 language: python
 
-matrix:
-  include:
-    - python: "pypy3"
-    - python: "pypy"
-    - python: "3.7"
-      dist: xenial
-      sudo: true
-    - python: "3.6"
-    - python: "3.5"
-    - python: "3.4"
-    - python: "2.7"
-
-# Use container-based infrastructure
-sudo: false
+python:
+  - "pypy3"
+  - "pypy"
+  - "3.8"
+  - "3.7"
+  - "3.6"
+  - "3.5"
+  - "2.7"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
